# scientific-calculator

./: Cargo.toml  README.md
.github/workflows/: run_tests.yml
src/: app.rs  calculator.rs  lib.rs  main.rs  tests.rs  token.rs  ui.rs
